<resources>
    <string name="app_name">移动执行</string>
    <string name="yunxin_test_appkey">f7e6d5ff154ca4b615abc8488da0c4c4</string>
    <string name="yunxin_product_appkey">4d4cbcbeaa65f388a289c980e98081f9</string>
    <string name="gaode_appkey_product">7f02b9b66d436aed2124d39fded1f1b0</string>
    <string name="gaode_appkey_test">853cad0b5f1846ecac9f3d0bb2a5f01e</string>
    <string name="baidu_appid">15337175</string>
    <string name="baidu_apikey">QexznmrisNXGk1EGc0SBkSlq</string>
    <string name="baidu_secretkey">DdcndCHpjogBLrNakvrSyIfD0U07pgwN</string>
    <string name="case_">案件</string>
    <string name="see_details">查看详情</string>
    <string name="tool">工具</string>
    <string name="mine">我</string>
    <string name="search">搜索</string>
    <string name="address">地址</string>
    <string name="verdict">审判文书</string>
    <string name="virtual_phone">虚拟电话</string>
    <string name="message_notifi">消息通知</string>
    <string name="message_node_acquisition">节点采集</string>
    <string name="message_media_collection">多媒体采集</string>
    <string name="service_documents">文书送达</string>
    <string name="final_interview">终本约谈</string>
    <string name="consulting_reply">咨询回复</string>
    <string name="wenshu_yulan">文书预览</string>
    <string name="choosecourt">选择法院</string>
    <string name="confirm">确定</string>
    <string name="send_state">送达状态</string>
    <string name="apply_people_">申请人:</string>
    <string name="apply_people_s">申 请 人:</string>
    <string name="apply_people">申请人</string>
    <string name="executed_people">被执行人</string>
    <string name="executed_people_">被执行人:</string>
    <string name="caseno_peoplename">案号/公司名/当事人姓名拼音首字母</string>
    <string name="lyrical_analysis">舆情风险</string>
    <string name="lyrical_party">当事人舆情</string>
    <string name="my_approval">我的审批</string>
    <string name="lyrical_record">聊天记录</string>
    <string name="anjianguanlian">关联案件</string>
    <string name="case_info">案件信息</string>
    <string name="casename">案     号</string>
    <string name="casereason">案    由</string>
    <string name="sendtime">发送时间</string>
    <string name="starttime">启动时间</string>
    <string name="djqx">冻结期限</string>
    <string name="singletime">签收时间</string>
    <string name="ckfw">查控范围</string>
    <string name="teammember">群成员</string>
    <string name="casehandling">案件办理</string>
    <string name="sendpeople">受送达人</string>
    <string name="servicedocument_name">文书名称</string>
    <string name="unsingle">未签收</string>
    <string name="clueprovide">线索核查</string>
    <string name="cluereport">线索举报</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="confirmed">已确认</string>
    <string name="tobe_confirmed">待确认</string>
    <string name="cancel">取消</string>
    <string name="hold_state">执结状态</string>
    <string name="approval_pending">待审批</string>
    <string name="approval_passed">已通过</string>
    <string name="approval_rejected">已拒绝</string>
    <string name="approval_refuseed">已驳回</string>
    <string name="verification_pending">等待核查</string>
    <string name="verification_passed">核查属实</string>
    <string name="verification_rejected">核查不实</string>
    <string name="cfwsyr">查封物所有人</string>
    <string name="cfwmc">查封物名称</string>
    <string name="djcwsyr">冻结财物所有人</string>
    <string name="djsj">冻结时间</string>
    <string name="cfsj">查封时间</string>
    <string name="cfqx">查封期限</string>
    <string name="hold_way">执结方式</string>
    <string name="unconnected">未接通</string>
    <string name="connected">已接通</string>
    <string name="hold_info">执结信息</string>
    <string name="car_info">车辆信息</string>
    <string name="car_number">车牌号</string>
    <string name="car_type">车辆类型</string>
    <string name="find_place">发现地点</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="empty_content">暂无数据</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="call_to_wangliang">“给王亮打电话” 或“打电话给王亮”</string>
    <string name="open_case_wangliang">“打开王亮的案子” 或 “打开2223号案子”</string>
    <string name="takepic_takevideo">“拍照” 或 “拍摄”</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 照</string>
    <string name="please_choose">请选择</string>
    <string name="please_input">请输入</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="withdrawn_msg">撤 回</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="reconciliation_protocol_pdf">和解协议.pdf</string>
    <string name="wenshu_type">文书类型</string>
    <string name="guide_handcase">办案指引</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="pic_and_video">图片和视频</string>
    <string name="history_call_record">历史通话记录</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="video_record_symbol">REC</string>
    <string name="video_record_begin">开始录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="contact">联系人</string>
    <string name="call_records">通话记录</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="team_admin_invite">管理员邀请</string>
    <string name="team_everyone_invite">所有人邀请</string>
    <string name="team_admin_update">管理员修改</string>
    <string name="team_everyone_update">所有人修改</string>
    <string name="team_invitee_need_authen">需要验证</string>
    <string name="team_invitee_not_need_authen">不需要验证</string>
    <string name="team_notify_mute">不提醒任何消息</string>
    <string name="team_notify_all">提醒所有消息</string>
    <string name="team_notify_manager">只提醒管理员消息</string>
    <string name="team_nickname">群昵称</string>
    <string name="team_nickname_none">未填写</string>
    <string name="team_identity">身份</string>
    <string name="remove_member">移出本群</string>
    <string name="team_member_info">成员信息</string>
    <string name="team_admin">管理员</string>
    <string name="team_creator">群主</string>
    <string name="team_member">群成员</string>
    <string name="update_success">保存成功</string>
    <string name="update_failed">保存失败, code:%d</string>
    <string name="no_permission">没有权限</string>
    <string name="set_team_admin">设为管理员</string>
    <string name="cancel_team_admin">取消管理员</string>
    <string name="team_member_remove_confirm">确定要将其移出群组么?</string>
    <string name="team_annourcement">群公告</string>
    <string name="invite_member">邀请成员</string>
    <string name="team_name">群名称</string>
    <string name="team_introduce">群介绍</string>
    <string name="team_extension">扩展示例</string>
    <string name="click_set">点击设置</string>
    <string name="create_advanced_team">创建高级群</string>
    <string name="reach_team_member_capacity">成员数量不能超过%1$d</string>
    <string name="team_authentication">身份验证</string>
    <string name="team_invite">邀请他人权限</string>
    <string name="team_info_update">群资料修改权限</string>
    <string name="team_invitee_authentication">被邀请人身份验证</string>
    <string name="create_team">创建群</string>
    <string name="over_team_member_capacity">邀请失败，成员人数上限为%1$d人</string>
    <string name="over_team_capacity">创建失败，创建群数量达到限制</string>
    <string name="create_team_failed">创建失败</string>
    <string name="create_team_success">创建成功</string>
    <string name="team_announce_title">标题</string>
    <string name="team_announce_content">公告内容</string>
    <string name="team_announce_notice">请输入群公告标题</string>
    <string name="my_team_card">我的群名片</string>
    <string name="team_introduce_hint">点击填写群介绍</string>
    <string name="team_extension_hint">点击修改扩展内容</string>
    <string name="team_announce_hint">点击填写群公告</string>
    <string name="pass">通过</string>
    <string name="caichan_true">属实</string>
    <string name="caichan_false">不实</string>
    <string name="refuse">拒绝</string>
    <string name="caseagent_approval">案件代理审批详情</string>
    <string name="executed_body">执行主体</string>
    <string name="litigation_status">诉讼地位</string>
    <string name="agenttype">代理类型</string>
    <string name="id_number">证件号码</string>
    <string name="unitname">单位名称</string>
    <string name="contactinformation">联系方式</string>
    <string name="executenumber">当事人证件号</string>
    <string name="idnumber">证件号码</string>
    <string name="remarks">备注</string>
    <string name="type">类型</string>
</resources>