<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/unit_50"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/ic_line"
        layout="@layout/line_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit_0.5" />

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ic_line"
        android:orientation="horizontal">

        <LinearLayout

            android:id="@+id/ll_case"
            style="@style/lab_style">


            <ImageView
                android:id="@+id/iv_case"
                style="@style/labicon_style"
                android:src="@drawable/case_normal" />

            <View
                android:layout_width="0dp"
                android:layout_height="14dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_case"
                style="@style/labtext_style"

                android:text="@string/case_"
          />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tool"
            style="@style/lab_style">

            <ImageView
                android:id="@+id/iv_tool"
                style="@style/labicon_style"
                android:src="@drawable/tool_normal" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_tool"
                style="@style/labtext_style"

                android:text="@string/tool"
          />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            style="@style/lab_style">

            <ImageView
                android:id="@+id/iv_mine"
                style="@style/labicon_style"
                android:src="@drawable/me_normal" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                style="@style/labtext_style"
                android:id="@+id/tv_mine"
                android:text="@string/mine"
            />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>